--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "^54.0.0",
+    "expo-application": "^7.0.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~15.0.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~1.6.0",
     "expo-symbols": "~0.4.5",
