--- a/app.json
+++ b/app.json
@@ -8,21 +8,27 @@
     "scheme": "reactnativedemoapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.thecookai.app"
     },
+
     "android": {
+      "package": "com.thecookai.app",
+      "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
+      }
     },
+
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+
     "plugins": [
       "expo-router",
       [
@@ -37,8 +43,13 @@
       "expo-font",
       "expo-secure-store"
     ],
+
     "experiments": {
       "typedRoutes": true
+    },
+
+    "androidStatusBar": {
+      "backgroundColor": "#ffffff"
     }
   }
 }
