--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "^54.0.0",
+    "expo-apple-authentication": "~8.0.7",
     "expo-application": "^7.0.7",
-    "expo-blur": "~14.1.5",
+    "expo-auth-session": "~7.0.8",
+    "expo-blur": "~15.0.7",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~15.0.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
-    "expo-linear-gradient": "~14.1.5",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~15.0.7",
@@ -35,7 +37,7 @@
     "expo-status-bar": "~1.6.0",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
+    "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.0.0",
     "react-native": "0.81.4",
