--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo-google-fonts/nunito": "^0.4.1",
     "@expo-google-fonts/poppins": "^0.4.0",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -62,7 +63,6 @@
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
   },
-
   "overrides": {
     "nth-check": "2.1.1",
     "css-select": "4.3.0",
@@ -73,7 +73,5 @@
       "nth-check": "2.1.1"
     }
   },
-
-
   "private": true
 }
