--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ EXPO_PUBLIC_GOOGLE_TOKEN_URL=https://oauth2.googleapis.com/token
 EXPO_PUBLIC_APPLE_CLIENT_ID=com.thecookai.app.signin
 EXPO_PUBLIC_APPLE_REDIRECT_URI=https://thecookai.app/auth/callback
 EXPO_PUBLIC_APPLE_AUTH_BASE_URL=https://appleid.apple.com/auth/authorize
+
+
+
+
+SUPERWALL_API_KEY=pk_gH8sdUT4gXpn6CjHG06zl
