--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -26,14 +26,16 @@
     "expo-application": "^7.0.7",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
+    "expo-build-properties": "^1.0.9",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.18",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.14",
+    "expo-router": "^6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -42,8 +44,10 @@
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react-native": "^0.75.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-purchases": "^9.6.5",
+    "react-native-purchases-ui": "^9.6.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-roulette-wheel": "^1.0.4",
     "react-native-safe-area-context": "~5.6.0",
@@ -55,7 +59,9 @@
     "react-native-webview": "13.15.0",
     "react-native-wheel-of-fortune": "^1.5.4",
     "react-native-wheel-picker": "^1.2.0",
-    "react-native-wheel-picker-android": "^2.0.6"
+    "react-native-wheel-picker-android": "^2.0.6",
+    "react-native-worklets": "^0.6.1",
+    "react-native-worklets-core": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
